--- a/index.html
+++ b/index.html
@@ -14,13 +14,52 @@
 	<h1>Awesome 80's Trivia!<h1>
 </div>
 
+<div class="container">
 <div id="timer">
 	<h2>Time Remaining:" "</h2>
 </div>
 
 <div class="questions">
-	</div>
+   <form>
+   	<p>What was the name of the girl on "Small Wonder?"</p>
+   	<span><input type="radio" id="m-choice" name="question 1" value="Vicki">Vicki<br></span>
+   	<span><input type="radio" id="m-choice" name="question 1" value="Samantha">Samantha<br></span>
+   	<span><input type="radio" id="m-choice" name="question 1" value="Danielle">Danielle<br></span>
+   	<span><input type="radio" id="m-choice" name="question 1" value="Nicole">Nicole<br></span>
+ 
+    <p>On Three's Company, what city did the three roommates live in?</p>
+    <input type="radio" id="m-choice" name="question 1" value="Los Angeles">Los Angeles<br>
+   	<input type="radio" id="m-choice" name="question 1" value="Chicago">Chicago<br>
+   	<input type="radio" id="m-choice" name="question 1" value="New Jersey">New Jersey<br>
+   	<input type="radio" id="m-choice" name="question 1" value="San Diego">San Diego<br>
 
+   	<p>What was the name of Punky Bruster's dog?</p>
+   	<input type="radio" id="m-choice" name="question 1" value="Lena">Lena<br>
+   	<input type="radio" id="m-choice" name="question 1" value="Brandon">Brandon<br>
+   	<input type="radio" id="m-choice" name="question 1" value="Spot">Spot<br>
+   	<input type="radio" id="m-choice" name="question 1" value="Cookie">Cookie<br>
+
+   	<p>What was the full name of Magnum P.I.?</p>
+   	<input type="radio" id="m-choice" name="question 1" value="Oscar Strong">Oscar Strong<br>
+   	<input type="radio" id="m-choice" name="question 1" value="Michael Knight">Michael Knight<br>
+   	<input type="radio" id="m-choice" name="question 1" value="Thomas Magnum">Thomas Magnum<br>
+   	<input type="radio" id="m-choice" name="question 1" value="Carl Pierce">Carl Pierce<br>
+
+    <p>What was the name of the principal on Saved By the Bell?</p>
+    <input type="radio" id="m-choice" name="question 1" value="Richard Belding">Richard Belding<br>
+   	<input type="radio" id="m-choice" name="question 1" value="Tommy Lawson">Tommy Lawson<br>
+   	<input type="radio" id="m-choice" name="question 1" value="Richard Smalls">Richard Smalls<br>
+   	<input type="radio" id="m-choice" name="question 1" value="Austin Love">Austin Love<br>
+
+   	<p>What was the occupation of Claire Huxstable on The Cosby Show?</p>
+   	<input type="radio" id="m-choice" name="question 1" value="Dentist">Dentist<br>
+   	<input type="radio" id="m-choice" name="question 1" value="Doctor">Doctor<br>
+   	<input type="radio" id="m-choice" name="question 1" value="Lawyer">Lawyer<br>
+   	<input type="radio" id="m-choice" name="question 1" value="Scientist">Scientist<br>
+   </form>
+
+	</div>
+</div>
 
 
 
