--- a/index.html
+++ b/index.html
@@ -28,36 +28,42 @@
    	<span><input type="radio" id="m-choice" name="question 1" value="Samantha">Samantha<br></span>
    	<span><input type="radio" id="m-choice" name="question 1" value="Danielle">Danielle<br></span>
    	<span><input type="radio" id="m-choice" name="question 1" value="Nicole">Nicole<br></span>
+    <img src="assets/images/Vicki-Small Wonder.jpg">
  
     <p>On Three's Company, what city did the three roommates live in?</p>
-    <input type="radio" id="m-choice" name="question 1" value="Los Angeles">Los Angeles<br>
-   	<input type="radio" id="m-choice" name="question 1" value="Chicago">Chicago<br>
-   	<input type="radio" id="m-choice" name="question 1" value="New Jersey">New Jersey<br>
-   	<input type="radio" id="m-choice" name="question 1" value="San Diego">San Diego<br>
+    <input type="radio" id="m-choice" name="question 2" value="Los Angeles">Los Angeles<br>
+   	<input type="radio" id="m-choice" name="question 2" value="Chicago">Chicago<br>
+   	<input type="radio" id="m-choice" name="question 2" value="New Jersey">New Jersey<br>
+   	<input type="radio" id="m-choice" name="question 2" value="San Diego">San Diego<br>
+    <img src="assets/images/San Diego-Three's Company.jpg">
 
    	<p>What was the name of Punky Bruster's dog?</p>
-   	<input type="radio" id="m-choice" name="question 1" value="Lena">Lena<br>
-   	<input type="radio" id="m-choice" name="question 1" value="Brandon">Brandon<br>
-   	<input type="radio" id="m-choice" name="question 1" value="Spot">Spot<br>
-   	<input type="radio" id="m-choice" name="question 1" value="Cookie">Cookie<br>
+   	<input type="radio" id="m-choice" name="question 3" value="Lena">Lena<br>
+   	<input type="radio" id="m-choice" name="question 3" value="Brandon">Brandon<br>
+   	<input type="radio" id="m-choice" name="question 3" value="Spot">Spot<br>
+   	<input type="radio" id="m-choice" name="question 3" value="Cookie">Cookie<br>
+    <img src="assets/images/Punky Bruster-Brandon.jpg">
 
    	<p>What was the full name of Magnum P.I.?</p>
-   	<input type="radio" id="m-choice" name="question 1" value="Oscar Strong">Oscar Strong<br>
-   	<input type="radio" id="m-choice" name="question 1" value="Michael Knight">Michael Knight<br>
-   	<input type="radio" id="m-choice" name="question 1" value="Thomas Magnum">Thomas Magnum<br>
-   	<input type="radio" id="m-choice" name="question 1" value="Carl Pierce">Carl Pierce<br>
+   	<input type="radio" id="m-choice" name="question 4" value="Oscar Strong">Oscar Strong<br>
+   	<input type="radio" id="m-choice" name="question 4" value="Michael Knight">Michael Knight<br>
+   	<input type="radio" id="m-choice" name="question 4" value="Thomas Magnum">Thomas Magnum<br>
+   	<input type="radio" id="m-choice" name="question 4" value="Carl Pierce">Carl Pierce<br>
+    <img src="assets/images/Thomas Magnum-Magnum P.I..jpg">
 
     <p>What was the name of the principal on Saved By the Bell?</p>
-    <input type="radio" id="m-choice" name="question 1" value="Richard Belding">Richard Belding<br>
-   	<input type="radio" id="m-choice" name="question 1" value="Tommy Lawson">Tommy Lawson<br>
-   	<input type="radio" id="m-choice" name="question 1" value="Richard Smalls">Richard Smalls<br>
-   	<input type="radio" id="m-choice" name="question 1" value="Austin Love">Austin Love<br>
+    <input type="radio" id="m-choice" name="question 5" value="Richard Belding">Richard Belding<br>
+   	<input type="radio" id="m-choice" name="question 5" value="Tommy Lawson">Tommy Lawson<br>
+   	<input type="radio" id="m-choice" name="question 5" value="Richard Smalls">Richard Smalls<br>
+   	<input type="radio" id="m-choice" name="question 5" value="Austin Love">Austin Love<br>
+    <img src="assets/images/Richard Belding-Saved By The Bell.jpg">
 
    	<p>What was the occupation of Claire Huxtable on The Cosby Show?</p>
-   	<input type="radio" id="m-choice" name="question 1" value="Dentist">Dentist<br>
-   	<input type="radio" id="m-choice" name="question 1" value="Doctor">Doctor<br>
-   	<input type="radio" id="m-choice" name="question 1" value="Lawyer">Lawyer<br>
-   	<input type="radio" id="m-choice" name="question 1" value="Scientist">Scientist<br>
+   	<input type="radio" id="m-choice" name="question 6" value="Dentist">Dentist<br>
+   	<input type="radio" id="m-choice" name="question 6" value="Doctor">Doctor<br>
+   	<input type="radio" id="m-choice" name="question 6" value="Lawyer">Lawyer<br>
+   	<input type="radio" id="m-choice" name="question 6" value="Scientist">Scientist<br>
+    <img src="assets/images/Claire Huxtable-Lawyer.jpg">
     <br><br>
      <button id="doneBtn">Done</button>
   </form>
