--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<title>Trivia Game</title>
 	<!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
- <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 </head>     
 
@@ -21,9 +20,9 @@
   <!-- <p class="timeRemaing"></p> -->
 </div>
 
-<div class="questions">
-  <form>
-   	<p>What was the name of the girl on "Small Wonder?"</p>
+<div class="questions"></div>
+  <!-- <form> -->
+   	<!-- <p>What was the name of the girl on "Small Wonder?"</p>
    	<span><input type="radio" id="m-choice" name="question 1" value="Vicki">Vicki<br></span>
    	<span><input type="radio" id="m-choice" name="question 1" value="Samantha">Samantha<br></span>
    	<span><input type="radio" id="m-choice" name="question 1" value="Danielle">Danielle<br></span>
@@ -65,17 +64,17 @@
    	<input type="radio" id="m-choice" name="question 6" value="Scientist">Scientist<br>
     <img src="assets/images/Claire Huxtable-Lawyer.jpg">
     <br><br>
-     <button id="doneBtn">Done</button>
-  </form>
+     <button id="doneBtn">Done</button> -->
+ <!--  </form> -->
 
 <div id="totalScoreDiv">
-   <ul>
+   <!-- <ul>
       <li>Correct: <span id="total-right"></span></li>
       <li>Incorrect: <span id="total-wrong"></span></li>
       <li>Unanswered: <span id="unanswered"></span></li>
-    </ul>
+    </ul> -->
 	</div>
-</div>
+
 
 <script type="text/javascript" src="assets/javascript/app.js"></script>
 
